# personal-web

./: .gitignore
event-wall-api/: .gcloudignore  .gitignore  Dockerfile  Makefile  conftest.py  cors.json  main.py  requirements.txt  setup.cfg
event-wall-api/db/: db.py
event-wall-api/monitoring/: metrics.py
event-wall-api/processors/: __init__.py  compress_image.py  compress_video.py  validate.py
event-wall-api/storage/: gcs.py
event-wall-api/tests/: test_compress_image.py  test_compress_video.py  test_db.py  test_gcs.py  test_main.py  test_validate.py
event-wall-api/video_processor/: CMakeLists.txt  analyze.cpp  analyze.h  encode.cpp  encode.h  frame.cpp  frame.h  main.cpp
event-wall-api/video_processor/tests/: test_analyze.cpp  test_encode.cpp  test_frame.cpp  test_main.cpp
infra/: event-wall-schema.sql
my-personal-website/: .gitignore  middleware.ts  netlify.toml  next.config.ts  package-lock.json  package.json
my-personal-website/app/: globals.css  layout.tsx  page.tsx
my-personal-website/app/admin/: page.tsx
my-personal-website/app/api/admin/delete-upload/: route.ts
my-personal-website/app/api/event_file/: route.ts
my-personal-website/app/api/event_file/signed/: route.ts
my-personal-website/app/api/event_file/stream/: route.ts
my-personal-website/app/api/fencing/: route.ts
my-personal-website/app/api/gallery/: route.ts
my-personal-website/app/api/gallery_file/: route.ts
my-personal-website/app/api/itunes_preview/: route.ts
my-personal-website/app/api/portfolio_file/: route.ts
my-personal-website/app/api/resume/: route.ts
my-personal-website/app/api/spotify_data/: route.ts
my-personal-website/app/api/spotify_files/: route.ts
my-personal-website/app/api/upload/: route.ts
my-personal-website/app/event/[slug]/: EventGalleryClient.tsx  page.tsx
my-personal-website/app/event/[slug]/upload/: UploadForm.tsx  page.tsx
my-personal-website/app/event/[slug]/wall/: page.tsx
my-personal-website/app/events/: page.tsx
my-personal-website/app/fencing/: page.tsx
my-personal-website/app/login/: page.tsx
my-personal-website/components/: EventsPreview.tsx
my-personal-website/components/base/avatar/: avatar-profile-photo.tsx  avatar.tsx
my-personal-website/components/event/: EventSwitcher.tsx  MosaicWall.tsx  TileOverlay.tsx
my-personal-website/components/fencing/: FencingPage.tsx
my-personal-website/components/icons/: DeviconAzuresqldatabase.tsx  DeviconCplusplus.tsx  DeviconDocker.tsx  DeviconGithubactions.tsx  DeviconGo.tsx  DeviconGooglecloudWordmark.tsx  DeviconJava.tsx  DeviconJavascript.tsx  DeviconPython.tsx  DeviconTypescript.tsx  GrommetIconsGithub.tsx  SkillIconsC.jsx
my-personal-website/components/main/background/: StarBackground.tsx  StarBackgroundClient.tsx  VideoBackground.tsx  VideoContainer.tsx
my-personal-website/components/main/hero/: Hero.tsx  HeroContent.tsx
my-personal-website/components/main/music/: ArtistBar.tsx  ArtistTrackButton.tsx  Charts.tsx  Header.tsx  MostLoyalArtist.tsx  ObsessionTracker.tsx  SpotifySection.tsx  StatCard.tsx  TrackRow.tsx  Utils.tsx  music_utils.ts
my-personal-website/components/main/navigation/: Navbar.tsx
my-personal-website/components/main/photography/: Photos.tsx
my-personal-website/components/main/projects/: ProjectCard.tsx  Projects.tsx
my-personal-website/components/main/resume/: Resume.tsx
my-personal-website/components/main/utils/: types.ts
my-personal-website/components/ui/: aurora-text.tsx  hyper-text.tsx  marquee.tsx  morphing-text.tsx  rainbow-button.tsx
my-personal-website/lib/: cache.ts  supabase-server.ts  supabase.ts  types.ts  utils.ts
my-personal-website/public/my_spotify_data/: MySpotifyDataTable.csv
my-personal-website/public/my_spotify_data/spotify_extended_history/: Streaming_History_Video_2016-2023.json  Streaming_History_Video_2017-2025.json
my-personal-website/videos/: VID_20260226_225927.MP4.json  colored-graded.mp4.json  curve_editor.mp4.json  platypus-swimming.mp4.json
